--- a/sphinx_rtd_theme/breadcrumbs.html
+++ b/sphinx_rtd_theme/breadcrumbs.html
@@ -5,8 +5,21 @@
 {% else %}
 {% set suffix = source_suffix %}
 {% endif %}
+{% set reldelim1 = '&nbsp;' %}
+{% set reldelim2 = ' |' %}
 
 <div role="navigation" aria-label="breadcrumbs navigation">
+  <ul class="wy-breadcrumbs" style="margin-bottom: 10px">
+    <li></li>
+    {%- for rellink in rellinks %}
+      <li class="wy-breadcrumbs-aside" >
+        {%- if not loop.last %}{{ reldelim1 }}{% endif %}
+        <a href="{{ pathto(rellink[0]) }}" title="{{ rellink[1]|striptags|e }}"
+           {{ accesskey(rellink[2]) }}>{{ rellink[3] }}</a>
+        {%- if not loop.first %}{{ reldelim2 }}{% endif %}</li>
+    {%- endfor %}
+    {%- block relbaritems %} {% endblock %}
+  </ul>
   <ul class="wy-breadcrumbs">
     <li><a href="{{ pathto(master_doc) }}">Docs</a> &raquo;</li>
       {% for doc in parents %}
@@ -20,9 +33,9 @@
         {% elif display_bitbucket %}
           <a href="https://bitbucket.org/{{ bitbucket_user }}/{{ bitbucket_repo }}/src/{{ bitbucket_version}}{{ conf_py_path }}{{ pagename }}{{ suffix }}" class="fa fa-bitbucket"> Edit on Bitbucket</a>
         {% elif show_source and source_url_prefix %}
-          <a href="{{ source_url_prefix }}{{ pagename }}{{ suffix }}">View page source</a>
+          <a href="{{ source_url_prefix }}{{ pagename }}{{ suffix }}">view page source</a>
         {% elif show_source and has_source and sourcename %}
-          <a href="{{ pathto('_sources/' + sourcename, true)|e }}" rel="nofollow"> View page source</a>
+          <a href="{{ pathto('_sources/' + sourcename, true)|e }}" rel="nofollow"> view page source</a>
         {% endif %}
       {% endif %}
     </li>
